  * checkbox/scripts/audio_settings: Place/read active_profiles in an
    absolute, known-writable location (LP: #1271707)
  * scripts/virtualization, scripts/network: Use specific environment
    variables for configuration, if available (LP: #1260507)
  * jobs/disk.txt.in: Remove max_diskspace* tests that are confusing and not
    used in any whitelist (LP: #1031997)

  [ Zygmunt Krynicki ]
  * Incremented changelog

 -- Daniel Manrique <roadmr@ubuntu.com>  Wed, 29 Jan 2014 17:07:13 -0500

checkbox (0.17.2) trusty; urgency=low

  [ Daniel Manrique ]
  * Incremented changelog

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 10 Jan 2014 10:44:27 +0000

checkbox (0.17.1) trusty; urgency=low

  [ Chris Gregan ]
  * slight modification to existing touch tests to remove depends on failing
    mutitouch-automated

  [ Jeff Lane ]
  * scripts/network Handle ZeroDivisionError better (LP: #1257308)


  [ Daniel Manrique ]
  * Removed suspend_test script which hasn't been touched in over 3 years
    and is not used in any jobs. (LP: #752881)
  * Changed touchpad_test to use default scrolling method, and added a switch
    to force edge scrolling if desired. Updated legacy tests to use edge
    scrolling when the test description makes that appropriate. (LP: #1259987)
  * scripts/virtualization: Shut down the VM properly so as to not damage the
    disk image; work properly with "second-boot" VM images (LP: #1259879)

 -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 13 Dec 2013 12:08:26 -0500

checkbox (0.17) trusty; urgency=low

  [ Chris Gregan ]
  * Updates made to touchpad and suspend jobs for new tests. 
  * Updates made to the touchscreen jobs file for new tests.

  [ Zygmunt Krynicki ]
  * Incremented changelog
  * Make plainbox-service a transitional package that depends on
    checkbox-ng-service. 

  [ Manoj Iyer ]
  * Make cpu stress test work with cloud instances. Cloud instances have